--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"@ionic/core": "^5.1.0",
+		"@ionic/vue": "0.0.9",
 		"apollo-cache-inmemory": "^1.6.5",
 		"apollo-client": "^2.6.8",
 		"apollo-link-http": "^1.5.17",
@@ -27,6 +29,7 @@
 		"eslint-plugin-vue": "^6.2.2",
 		"graphql-tag": "^2.9.0",
 		"vue-cli-plugin-apollo": "~0.21.3",
+		"ionicons": "^4.5.9-1",
 		"vue-template-compiler": "^2.6.11"
 	},
 	"eslintConfig": {
