--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"apollo-link-http": "^1.5.17",
 		"core-js": "^3.6.4",
 		"graphql": "^14.0.0",
+		"ionicons": "^5.0.1",
 		"vue": "^2.6.11",
 		"vue-apollo": "^3.0.0-beta.11",
+		"vue-ionicons": "^3.0.4",
 		"vue-router": "^3.1.6"
 	},
 	"devDependencies": {
@@ -29,7 +31,6 @@
 		"eslint-plugin-vue": "^6.2.2",
 		"graphql-tag": "^2.9.0",
 		"vue-cli-plugin-apollo": "~0.21.3",
-		"ionicons": "^4.5.9-1",
 		"vue-template-compiler": "^2.6.11"
 	},
 	"eslintConfig": {
