--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-ionicons": "^3.0.4",
+    "vue-qriously": "^1.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
