--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
 	"hosting": {
 		"site": "zaphyr-pwa",
-		"public": "./dist",
+		"public": "/dist",
 		"ignore": [ "firebase.json", "**/.*", "**/node_modules/**" ],
 		"rewrites": [
 			{
