--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,7 +26,8 @@
 			"purpose": "maskable"
 		}
 	],
-	"start_url": "/",
+	"start_url": "./",
+	"scope": ".",
 	"display": "standalone",
 	"background_color": "#FFF"
 }
